[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "nose2"
description = "unittest with plugins"
readme = "README.rst"
keywords = [
  "testing",
  "tests",
  "unittest",
]
license = { text = "BSD-2-Clause" }
authors = [
  { name = "Stephen Rosen", email = "dev@nose2.io" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
]
dynamic = [
  "version",
]
optional-dependencies.coverage_plugin = [
  "coverage",
]
optional-dependencies.dev = [
  "sphinx",
  "sphinx-issues",
  "sphinx-rtd-theme",
]
urls.changelog = "https://docs.nose2.io/en/latest/changelog.html"
urls.documentation = "https://docs.nose2.io/"
urls.repository = "https://github.com/nose-devs/nose2"
scripts.nose2 = "nose2:discover"

[tool.setuptools.dynamic]
version = { attr = "nose2.__version__" }

[tool.isort]
profile = "black"
known_third_party = [
  "coverage",
  "mock",
]

[tool.mypy]
# strict = true
sqlite_cache = true
ignore_missing_imports = true
disallow_subclassing_any = false
files = [
  "nose2",
]
